bg(frontend)fix noko project tag not showing - fill-up the empty spaces with N/A for missing projects.
[starts: #167294842]

--- a/src/components/AutomationDetails/styles.scss
+++ b/src/components/AutomationDetails/styles.scss
@@ -237,7 +237,7 @@
             }
             &.name{
                 color: #889;
-                text-transform: lowercase;
+                text-transform: uppercase;
             }
         }
     }
